--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100vh;
-    
+    background-color: ivory;
     background-size: cover;
     font-family: Helvetica;
     /* background: #c0ab9a; */
@@ -271,6 +271,7 @@ background-size:100% 100%;
 .gallery-images img{
     width: 25%;
     margin: 1.6666%;
+    height: 500px;
 }
 .outer-content-gallery{
     left: 20%;
@@ -282,6 +283,7 @@ background-size:100% 100%;
 @media only screen and (max-width:768px){
     .gallery-images img{
         width: 90%;
+        height: 400px;
     }
 }
 @media only screen and (min-width:769px){
